# 22s-final-project-googlyeyes

./: .gitignore  Article.h  AvlTree.h  CMakeLists.txt  HashMap.h  Pair.h  Parser.cpp  Parser.h  Query.cpp  Query.h  README.md  catch.hpp  main.cpp  porter2_stemmer.cpp  porter2_stemmer.h  thread_pool.h
